syntax = "proto3";

option php_namespace = "App\\Protobuff";
option php_metadata_namespace = "App\\GPBMetadata";

message EmailPb {
    string localPart = 1;
    string domainPart = 2;
}

message MobilePb {
    string mobileNo = 1;
}

message ContactDetailPb {
    EmailPb email = 1;
    MobilePb mobile = 2;
}