syntax = "proto3";

option php_namespace = "App\\Protobuff";
option php_metadata_namespace = "App\\GPBMetadata";

import "entityPb.proto";
import "summaryPb.proto";
import "namePb.proto";
import "contactDetailPb.proto";
import "imagePb.proto";
import "timePb.proto";


message DeliveryManPb {
    EntityPb dbInfo = 1;
    NamePb name = 2;
    ContactDetailPb contact = 3;
    ImageRefPb profileImage = 4;
    string adharNo = 5;
    TimePb time = 6;
}

message DeliveryManRefPb{
    string id = 1;
    NamePb name = 2;
}

message DeliveryManSearchRequestPb {

}

message DeliveryManSearchResponsePb {
    SummaryPb summary = 1;
    repeated DeliveryManPb results = 2;
}



